--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,26 @@
+// theme colors
+
+$purple: #6f42c1;
+$pink: #d63384;
+
+// white and gray colors
+
+// scss-docs-start gray-color-variables
+$white: #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black: #000;
+
+$primary: $purple;
+$secondary: $pink;
+
 // import bootstrap 5
 
-@import"../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
