--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,7 +1,8 @@
 // theme colors
 
-$purple: #6f42c1;
-$pink: #d63384;
+$purple-dark: #9926f0;
+$purple-light: #bb6ef5;
+$pink: #d122e3;
 
 // white and gray colors
 
@@ -18,7 +19,7 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black: #000;
 
-$primary: $purple;
+$primary: $purple-dark;
 $secondary: $pink;
 
 // import bootstrap 5
