--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -9,3 +9,10 @@
     rgba($secondary, 0.95)
   );
 }
+
+@mixin absoluteCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
