--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,13 @@
 @use 'custom';
 // IMPORT THE COMPONENTS
 @use 'components/animations';
-@use './components/buttons';
+@use 'components/buttons';
 @use 'components/mixins';
 @use 'components/typography';
 
 // IMPORT THE SECTIONS
-@use './\ sections\ /navbar';
-// @use 'sections/intro-section';
-// @use 'sections/campanies';
+@use 'sections/navbar';
+@use 'sections/intro-section'; // @use 'sections/campanies';
 // @use 'sections/services';
 // @use 'sections/testimonials';
 // @use 'sections/faq';
